# malti-notes

./: .env.example  .gitignore  all_pages.html  animals.html  animals_mqf1.html  body_appearance.html  collective_nouns.html  colors_maltese.html  common_mistakes.html  common_mistakes_mqf1.html  comparisons.html  daily_problems.html  daily_routine.html  daily_routine_mqf1.html  directions_town.html  emotions.html  family_home_food.html  family_home_food_mqf1.html  food_preferences.html  health_doctor.html  home_furniture.html  impactful_people.html  imperative_verbs.html  index.html  modals_needs.html  numbers_calendar_time.html  numbers_calendar_time_mqf1.html  picture_description.html  picture_description_mqf1.html  places_events.html  prepositions_place.html  pronouns_possessives.html  pronouns_possessives_mqf1.html  restaurant_ordering.html  review_cards.html  sentence_builder.html  sentence_builder_mqf1.html  shopping_clothes.html  transport_travel.html  verbs_course_lessons.md  (+5 more)
.github/workflows/: build-pages-with-wasm.yml
assets/css/: pages.css  site.css  theme.css
assets/data/: animals.json  animals_examples.json  body_appearance.json  body_appearance_examples.json  collective_nouns.json  (+44 more)
scripts/: BUILD_VERB_LOOKUP_PACK.md  GENERATE_REVIEW_SVGS.md  UTF8_MOJIBAKE_TOOL.md  build_verb_lookup_pack.py  export_verbs_course_lessons.py  export_verbs_extensions_to_verb_mt.py  fetch_missing_verbs.py  generate_review_svgs.py  generate_verbs_course_unreachable.py  inject_site_header_script.ps1  utf8_mojibake_tool.py
wasm-search/: Cargo.toml
wasm-search/src/: lib.rs
(+21 files in other folders)
