[package]
name = "malti-notes-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM helpers for Maltese search and normalization"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
